--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" href="./favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web project</title>
-    <script type="module" crossorigin src="./assets/index.9afa3bf4.js"></script>
-    <link rel="stylesheet" href="./assets/index.a8960570.css">
+    <script type="module" crossorigin src="./assets/index.db467613.js"></script>
+    <link rel="stylesheet" href="./assets/index.811cfd40.css">
   </head>
   <body>
     <div id="header-mobile"><img src="./assets/Logo.684d84cf.svg" id="header-mobile-logo"><img src="./assets/icon3.45e8e403.svg" id="header-mobile-button"></div>
@@ -27,6 +27,7 @@
       <li><a href="#">КОНТАКТЫ</a></li>
     </ul></div>
     <div id="header-container">
+    <!-- header-video - absolute -->
     <video id="header-video" src="./assets/header-video.a7c54cc5.mp4" autoplay loop muted ></video>
     <div id="header-druplicon"><img src="./assets/druplicon2.acda4ae9.svg" id="header-druplicon-img"></div>
     <header>
@@ -41,7 +42,7 @@
         </div>
         <div class="nav-number-lang">
           <div>8 800-222-26-73</div>
-          <div class="settings-buttons">
+          <div id="settings-buttons">
           </div>
         </div>
       </nav>
